# focus

./: LICENSE  Makefile  README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  note.rs
src/components/: Editor.vue  Search.vue
