[package]
name = "Focus"
version = "0.1.0"
description = "Minimalist notes to improve focus"
authors = ["Andrei Butov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.6"
dirs-next = "2.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
